# fullstack-rust

./: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  Shuttle.toml  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.js
assets/: output.css
configuration/: base.sample.toml  development.sample.toml  local.sample.toml  production.toml
migrations/: 20240902113425_create_user_table.up.sql  20240907075636_create_pokemon_table.down.sql  20240907075636_create_pokemon_table.up.sql  20240907104446_add_admin_account.down.sql  20240907104446_add_admin_account.up.sql
scripts/: build-docker-compose.sh
src/: catalog.rs  common.rs  configuration.rs  etl.rs  frontend.rs  lib.rs  main.rs  user_mgmt.rs
src/catalog/: entity.rs  error.rs  handler.rs  pages.rs  pokemon.rs  service.rs
src/catalog/pokemon/: entity.rs  service.rs
src/common/: date.rs  entity.rs  error.rs  filters.rs  time.rs
src/common/db/: postgres.rs
src/frontend/: home.rs
src/user_mgmt/: auth.rs  encryption.rs  entity.rs  error.rs  handler.rs  jwt.rs
templates/: base.html  login.html  me.html  register.html
templates/components/: header.html
templates/pokemon/: item.html  items.html
